fix: update scrollbar colour and resolve issue with doubled scrollbars

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,19 @@
 html, body {
-    height: 100%;
-    width: 100%;
+    height: auto;
+    min-height: 100vh;
     overflow-x: hidden;
+    overflow-y: auto;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 16px;
     line-height: 1.6;
     background: #edfdec;
-    /* #f6fbf6 */
     color: #091108;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scrollbar-color: #51b849 transparent;
+    scrollbar-gutter: both-edges;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
 }
 
 .main {
